fix: changed the image radius, and reduced the card's length to aviod image stretch

--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,13 @@ body {
     background-color: #ffffffd4;
     border-radius: 8px;
     width: 650px;
-    height: 350px;
+    height: 344px;
 }
 
 .image img {
     width: 300px;
-    height:350px;
-    border-radius: 4px 0px 0px 4px;
+    height:344px;
+    border-radius: 8px 0px 0px 8px;
 }
 
 .details {
